[package]
name = "gbc"
version = "0.1.0"
edition = "2021"
description = "Git branch creator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
panic = "abort"


[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
fuzzy_finder = "0.3.0"
shellexpand = "2.1.2"
git2 = "0.14"
