[package]
name = "gbc"
version = "0.1.0"
edition = "2021"
description = "Git branch creator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
panic = "abort"


[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
fuzzy_finder = "0.3.0"
git2 = "0.15"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
error-stack = "0.2.4"
anyhow = "1.0.68"
